fix: footer disclaimer overflow

--- a/sass/footer/main.scss
+++ b/sass/footer/main.scss
@@ -35,7 +35,7 @@ footer {
 	margin: auto;
 	flex-direction: column;
 	align-items: center;
-	flex: 3;
+	flex: 2;
 }
 
 .footer__column:last-child {
